--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,11 @@
 [[redirects]]
-  from = "/*"
-  to = "/"
-  status = 200
+  from = "/about"
+  to = "/about"
+  status = 200,
+  from = "/projects"
+  to = "/projects"
+  status = 200,
+  from = "/contact"
+  to = "/contact"
+  status = 200,
+  
