--- a/netlify.toml
+++ b/netlify.toml
@@ -1,11 +1,6 @@
 [[redirects]]
-  from = "/about"
-  to = "/about"
+  from = "/*"
+  to = "/"
   status = 200,
-  from = "/projects"
-  to = "/projects"
-  status = 200,
-  from = "/contact"
-  to = "/contact"
-  status = 200
+  
   
