--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "nuka-carousel": "^5.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-ga": "^3.3.1",
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
